
=== Ability to uninstall Data Sense from the Data Sense UI

You can uninstall Data Sense to permanently remove the software from the host, and in the case of a cloud deployment, delete the virtual machine / instance on which Data Sense was deployed. Deleting the instance permanently deletes all the indexed information Data Sense has scanned. https://docs.netapp.com/us-en/cloud-manager-data-sense/task-managing-compliance.html#deleting-the-cloud-data-sense-instance[See how].

=== New Filter for number of sensitive identifiers in the Data Investigation page

The “Number of identifiers” filter enables you to list the files that have a certain number of sensitive identifiers - including both personal data and sensitive personal data. You can select a range like 1-10 or 501-1000 to view only the files that contain that number of sensitive identifiers.

https://docs.netapp.com/us-en/cloud-manager-data-sense/task-controlling-private-data.html#filtering-data-in-the-data-investigation-page[See the list of all the filters you can use to investigate your data].

=== Now you can view the users and groups who have access to your directories

In the past you could view the type of open permissions allowed on a folder or file share. Now you can view a list of all users or groups who have access to these directories, and the types of permissions they have. https://docs.netapp.com/us-en/cloud-manager-data-sense/task-controlling-private-data.html#viewing-permissions-for-files-and-directories[See how to view the users and groups that have access to your folders and file shares].

== 11 May 2022

=== Support added for scanning data in Google Drive accounts

Now you can add your Google Drive accounts to Data Sense in order to scan the documents and files from those Google Drive accounts. https://docs.netapp.com/us-en/cloud-manager-data-sense/task-scanning-google-drive.html[See how to scan your Google Drive accounts].
