@@ -5,6 +5,7 @@ settings:
     pdf_enabled: true
   prod:
     pdf_enabled: true
+    harmony_enabled: true
 sidebar:
   entries:
     - title: All Cloud Manager documentation
@@ -63,16 +64,26 @@ sidebar:
           url: /task-org-private-data.html
         - title: Manage your private data
           url: /task-managing-highlights.html
-        - title: Add custom personal data identifiers
-          url: /task-managing-data-fusion.html
         - title: Generate reports
           url: /task-generating-compliance-reports.html
         - title: Respond to a DSAR
           url: /task-responding-to-dsar.html
         - title: Categories of private data
           url: /reference-private-data-categories.html
+    - title: Manage Cloud Data Sense
+      entries:
+        - title: Add custom personal data identifiers
+          url: /task-managing-data-fusion.html
+        - title: View the status of Data Sense actions
+          url: /task-view-compliance-actions.html
+        - title: Audit the history of Data Sense actions
+          url: /task-audit-data-sense-actions.html
+        - title: Reduce the Data Sense scan speed
+          url: /task-reduce-scan-speed.html
         - title: Remove data sources from Data Sense
           url: /task-managing-compliance.html
+        - title: Uninstall Data Sense
+          url: /task-uninstall-data-sense.html
     - title: Knowledge and support
       entries:
         - title: Register for support
