@@ -1,0 +1,32 @@
+---
+sidebar: sidebar
+permalink: task-reduce-scan-speed.html
+keywords: slow scans, reduce speed
+summary: Data scans have a negligible impact on your storage systems and on your data. However, if you are concerned with even a very small impact, you can configure Data Sense to perform "slow" scans.
+---
+
+= Reducing the Data Sense scan speed
+:hardbreaks:
+:nofooter:
+:icons: font
+:linkattrs:
+:imagesdir: ./media/
+
+[.lead]
+Data scans have a negligible impact on your storage systems and on your data. However, if you are concerned with even a very small impact, you can configure Data Sense to perform "slow" scans. 
+
+When enabled, slow scanning is used on all data sources - you can't configure slow scanning for a single working environment or data source.
+
+TIP: The scan speed can't be reduced when scanning databases.
+
+.Steps
+
+. From the bottom of the _Configuration_ page, move the slider to the right to activate slow scanning.
++
+image:screenshot_slow_scan_enable.png[A screenshot showing how to enable slow compliance scanning.]
++
+The top of the Configuration page indicates that slow scanning is enabled.
++
+image:screenshot_slow_scan_disable.png[A screenshot showing how to enable slow compliance scanning.]
+
+. You can disable slow scanning by clicking *Disable* from this message.
